# my-online-profile-backend

./: .env.example  .gitignore  README.md  TECH_STACK.md  pyproject.toml
app/: __init__.py  auth.py  database.py  models.py
app/routers/: expenses.py  invites.py  organizations.py  payments.py  projects.py  rag.py  settings.py  tags.py  todos.py  tokens.py  trips.py  users.py
app/services/: rag_service.py
tests/: conftest.py  test_auth.py  test_database.py  test_expenses.py  test_invites.py  test_organizations.py  test_payments.py  test_projects.py  test_rag.py  test_rag_service.py  test_settings.py  test_tags.py  test_todos.py  test_tokens.py  test_trips.py  test_users.py
