[project]
name = "my-online-profile-backend"
version = "0.1.0"
description = "Backend API with Todo CRUD and RAG endpoint"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.128.7",
    "libsql-client>=0.3.1",
    "openai>=2.20.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
